[package]
name = "lil-json"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/master-hax/lil-json"
license = "MIT OR Apache-2.0"
description = "serialize & deserialize JSON"
documentation = "https://docs.rs/lil-json"
keywords = ["json"]
categories = ["parsing", "no-std", "no-std::no-alloc", "embedded", "web-programming"]
exclude = [
    ".gitignore",
]

[dependencies]
embedded-io = { version = "0.6.1", default-features = false }
numtoa = { version = "0.3.1", default-features = false }

[dev-dependencies]
embedded-io-adapters = { version = "0.6.2", default-features = false, features = ["std"] }
