[package]
name = "lil-json"
version = "0.1.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/master-hax/lil-json"
license = "MIT OR Apache-2.0"
description = "serialize & deserialize JSON in no_std"
documentation = "https://docs.rs/lil-json"
keywords = ["json"]
categories = ["parsing", "no-std", "no-std::no-alloc", "embedded", "web-programming"]
exclude = [
    ".gitignore",
]

[features]
default = []
std = ["alloc", "embedded-io-adapters/std"]
alloc = [ "embedded-io/alloc" ]

[dependencies]
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-adapters = { version = "0.6.2", default-features = false, optional = true }
numtoa = { version = "0.3.1", default-features = false }

[dev-dependencies]
embedded-io-adapters = { version = "0.6.2", default-features = false, features = ["std"] }
