[package]
name = "lil-json"
version = "0.1.5"
edition = "2021"
readme = "README.md"
repository = "https://github.com/master-hax/lil-json"
license = "MIT OR Apache-2.0"
description = "serialize & deserialize JSON in no_std"
documentation = "https://docs.rs/lil-json"
keywords = ["json"]
categories = ["parsing", "no-std", "no-std::no-alloc", "embedded", "web-programming"]
exclude = [
    ".gitignore",
]

[features]
default = []
full = ["std"]
std = ["alloc", "embedded-io-adapters/std"]
alloc = [ "embedded-io/alloc", "dep:elsa" ]

[dependencies]
elsa = { version = "1.11.2", default-features = false, optional = true }
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-adapters = { version = "0.6.2", default-features = false, optional = true }
numtoa = { version = "0.3.1", default-features = false }

[dev-dependencies]
embedded-io-adapters = { version = "0.6.2", default-features = false, features = ["std"] }


[[example]]
name = "serialize_array_object"
required-features = ["std"]

[[example]]
name = "serialize_minimal"
required-features = ["std"]

[[example]]
name = "serialize_display"
required-features = ["std"]

[[example]]
name = "deserialize_array_object"
required-features = []